objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <description>Store information about the feature releases</description>
    <label>Release</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>