objects/Release__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores the description</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>