objects/Release__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <description>Store the link of external website</description>
    <label>External Link</label>
    <type>Url</type>
</CustomField>