objects/Release__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <description>Stores the profiles</description>
    <label>Profiles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard User</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
            </value>
            <value>
                <fullName>Custom: Sales Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Support Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Marketing Profile</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
            </value>
            <value>
                <fullName>Standard Platform User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>