objects/Release__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Store the date of the release</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>