objects/Release__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Stores the title of releases records</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>